--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Simon Says Game</h1>
-    <h2>Press any key to start the game</h2>
+    <div>
+        <h1>Simon Says Game</h1>
+        <h2>Press any key to start the game</h2>
+        <div class="btn-container">
+            <div class="line-one">
+                <div class="btn red" type="button" id="red">1</div>
+                <div class="btn yellow" type="button" id="yellow">2</div>
+            </div>
+            <div class="line-two">
+                <div class="btn green" type="button" id="green">3</div>
+                <div class="btn purple" type="button" id="purple">4</div>
+            </div>
+        </div>
+    </div><br><br><br>
 
-    <div class="btn-container">
-        <div class="line-one">
-            <div class="btn red" type="button" id="red">1</div>
-            <div class="btn yellow" type="button" id="yellow">2</div>
-        </div>
-        <div class="line-two">
-            <div class="btn green" type="button" id="green">3</div>
-            <div class="btn purple" type="button" id="purple">4</div>
-        </div>
-    </div>
+
+    
+    <div class="video"><a href="https://www.youtube.com/watch?v=EWJ5uYwQJGU&t=3s">=> Click here to understand the game</a></p></div>
     <script src="app.js"></script>
 </body>
 </html>
