--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="btn purple" type="button" id="purple">4</div>
             </div>
         </div>
-    </div><br><br><br>
+    </div><br>
 
 
     
